@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-22T08:17:24Z",
-  "count_outdated" : 349,
-  "uniques_outdated" : 188,
-  "count" : 376,
+  "timestamp" : "2022-06-23T00:56:00Z",
+  "count_outdated" : 351,
+  "uniques_outdated" : 189,
+  "count" : 377,
   "uniques" : 204,
   "clones" : [
-    {
-      "timestamp": "2022-06-08T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-09T00:00:00Z",
       "count": 2,
